# wacraft-reminders

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cmd/: config.rs  daemon.rs  mod.rs  reminders.rs
src/config/: mod.rs  models.rs
src/core/: mod.rs
src/core/email/: mod.rs
src/core/http_request/: mod.rs
src/core/wacraft/: client.rs  components.rs  mod.rs  models.rs
src/daemon/: mod.rs  pid.rs
