[package]
name = "wacraft-reminders"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
lettre = { version = "0.11.17", features = ["tokio1-native-tls"] }
log = "0.4.27"
nix = { version = "0.30.1", features = ["signal"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
shellexpand = "3.1.1"
simple-logging = "2.0.2"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.0", features = ["full"] }
